# nerds

./: .gitignore  design_fiction.md  nerds.md
output/blackboard/: item_0002.json  item_0003.json  item_0004.json  item_0006.json  item_0013.json
sample_movie/: README.md  metadata.json  template_library.json
week-10/: REQUIREMENTS.md  WRITEUP.md  blackboard.py  main.py  nerds.py  render.py  vocabulary.py
week-10/output/: narrative_the_voice_from_the_minaret_s99.md  provenance_the_voice_from_the_minaret_s99.ttl
week-6/: HANDOFF.md  poster_room.py
week-6/output/: nerd_log.md
week-6/sample_movie/: color_reference.json  stills_index.json  typeface_database.json
week-7/: DISTILLATION.md  STANDARDS-BRIEF.md  STANDARDS.md  WRITEUP.md  blackboard.py  main.py  nerds.py  pyproject.toml  render.py
week-7/distillation/: NARRATIVE.txt  distill.py  experience_library.yaml  nerds_distilled.py  trajectories_epoch1.yaml
week-8/: blackboard.py  main.py  nerds.py  pyproject.toml  render.py  vocabulary.py
week-8/output/: provenance_viewer.html
week-9/: WRITEUP.md  blackboard.py  main.py  narrator.py  nerds.py  render.py  vocabulary.py
week-9/output/: narrative_death_wish_4_the_crackdown.md  narrative_madonna_of_the_streets.md  narrative_ott_tänak_the_movie.md  narrative_the_picture_of_dorian_gray_s42.md  narrative_the_tarantula_s42.md  narrative_the_wild_cat.md  provenance_death_wish_4_the_crackdown.ttl  provenance_madonna_of_the_streets.ttl  provenance_ott_tänak_the_movie.ttl  provenance_the_picture_of_dorian_gray_s42.ttl  provenance_the_tarantula_s42.ttl  (+1 more)
(+9 files in other folders)
