[project]
name = "nerds-semantic"
version = "0.8.0"
description = "Semantic NERDS: blackboard poster generator grounded in W3C standards"
requires-python = ">=3.11"
dependencies = [
    "rdflib>=7.0",
    "pyshacl>=0.26",
    "SPARQLWrapper>=2.0",
    "requests>=2.31",
    "requests-oauthlib>=1.3",
    "pillow>=10.0",
    "numpy>=1.26",
]

[project.scripts]
nerds = "main:main"
